build22/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ContactExternal_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ContactExternal_ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Verify_Date__c</fullName>
        <label>Email Verify Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_Verify_Date__c</fullName>
        <description>The date the phone number was verified by the customer.</description>
        <label>Phone Verify Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>